--- a/index.ejs
+++ b/index.ejs
@@ -24,7 +24,7 @@
 	width: 800, // the width of the player
 	height: 600, // the height of the player
 	allowFullScreen: "true", // true by default, allow user to go full screen
-	initialVideo: "WWum0VRc6MI", // the video that is loaded into the player
+	initialVideo: "<%= videoID %>", // the video that is loaded into the player
 	preferredQuality: "default",// preferred quality: default, small, medium, large, hd720
 	onPlay: function(id){}, // after the play method is called
 	onPause: function(){}, // after the pause method is called
