finally adding the nav bar from local

--- a/index.ejs
+++ b/index.ejs
@@ -5,6 +5,15 @@
 <link rel="stylesheet" type="text/css" href="./style.css">
 
 <body>
+
+<div id='cssmenu'>
+<ul>
+   <li class='active'><a href='#'><span>Home</span></a></li>
+   <li><a href='#'><span>Account</span></a></li>
+   <li><a href='#'><span>Top Videos</span></a></li>
+   <li class='last'><a href='#'><span>About Us</span></a></li>
+</ul>
+</div>
 <div  id='title'>
 <h1>The Weird Part of YouTube</h1>
 </div>
