Start video immediately

--- a/index.ejs
+++ b/index.ejs
@@ -25,7 +25,8 @@
 </a>
 </div>
     <a class="button" onclick="document.querySelector('#theatre-box').style.visibility = 'visible';
-    document.querySelector('#title').style.visibility = 'hidden';">
+    document.querySelector('#title').style.visibility = 'hidden';
+    jQuery('#youtube-player-container').tubeplayer('play');">
         <span>Get Weird</span>
     </a>
 </body>
