finally added that footer

--- a/index.ejs
+++ b/index.ejs
@@ -30,6 +30,10 @@
         <span>Get Weird</span>
     </a>
 </body>
+<footer>
+  <p>Created at: RPI RCOS 2015</p>
+  <p>Contact information: raghua@rpi.edu, martij@rpi.edu, metrom@rpi.edu, metroa@rpi.edu</p>
+</footer>
 <script type="text/javascript">
         function playNextVid() {
           $.getJSON("./api/getvid", function(vid) {
