--- a/index.ejs
+++ b/index.ejs
@@ -48,6 +48,7 @@
 	allowFullScreen: "true", // true by default, allow user to go full screen
 	initialVideo: "<%= videoID %>", // the video that is loaded into the player
 	preferredQuality: "default",// preferred quality: default, small, medium, large, hd720
+	autoPlay: "true",
 	onPlay: function(id){}, // after the play method is called
 	onPause: function(){}, // after the pause method is called
 	onStop: function(){}, // after the player is stopped
