--- a/index.ejs
+++ b/index.ejs
@@ -17,7 +17,13 @@
 <div  id='title'>
 <h1>The Weird Part of YouTube</h1>
 </div>
-<div id='theatre-box'>
+<div id='theatre-box' onclick='
+		var theatrebox = document.querySelector("#theatre-box");
+		theatrebox.style.visibility = "hidden";
+
+
+		var title = document.querySelector("#title");
+		title.style.visibility = "visible";'	>
 <div  id='youtube-player-container'> </div>
 
 <a href="#" onClick='jQuery("#youtube-player-container").tubeplayer("play", document.getElementById("videoID").value)'> 
@@ -54,12 +60,6 @@
 	onSeek: function(time){}, // after the video has been seeked to a defined point
 	onMute: function(){},
 	onPlayerEnded: function(){
-		//var theatrebox = document.querySelector("#theatre-box");
-		//theatrebox.style.visibility = "hidden";
-
-
-		//var title = document.querySelector("#title");
-		//title.style.visibility = "visible";		
 		playNextVid();
         },
 	onPlayerPlaying: function(){
