Add code for retrieving bulk videos
Add code for retrieving bulk videos.  Will mainly be used for the admin
panel

--- a/index.ejs
+++ b/index.ejs
@@ -42,9 +42,9 @@
 </footer>
 <script type="text/javascript">
         function playNextVid() {
-          $.getJSON("./api/getvid", function(vid) {
+          $.getJSON("./api/randomvid", function(vid) {
             console.log(vid);
-            jQuery("#youtube-player-container").tubeplayer("play", vid.id);
+            jQuery("#youtube-player-container").tubeplayer("play", vid.vidID);
           });
         }
         $(document).keydown(function(e) {
