--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
+<head>
+<title>Weird Part of Youtube </title>
+</head>
 <script type='text/javascript' src='./jquery-2.1.4.min.js'></script>
 <script type='text/javascript' src='./jQuery.tubeplayer.min.js'></script>
 <link rel="stylesheet" type="text/css" href="./style.css">
