--- a/views/index.jade
+++ b/views/index.jade
@@ -1,20 +1,7 @@
-extends layout
-
-block content
-  #page-content-wrapper
-    .page-content.inset
-      .row
-        a#menu-toggle.btn.btn-default(href='#')
-          i.fa.fa-bars
-        .col-md-12
-          h1 Say something meaningful here.
-          p.lead Say something worthwhile here.
-          a(href="/") Go home
-          br
-          a(href="/ping") Ping
-
-  script
-    $("#menu-toggle").click(function(e) {
-      e.preventDefault();
-      $("#wrapper").toggleClass("active");
-    });
+if (!user)
+  a(href="/login") Login
+  br
+  a(href="/register") Register
+if (user)
+  p You are currently logged in as #{user.username}
+  a(href="/logout") Logout
