--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,9 +1,91 @@
-<%if (!user) { %>
-  <a href="/login"> Login </a>
-  <br>
-  <a href="/register"> Register </a>
-<% } %>
-<%if (user) { %>
-  <p> You are currently logged in as <%= user.username %> </p>
-  <a href="/logout"> Logout </a>
-<% } %>
+<!DOCTYPE html>
+<html>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
+<script type='text/javascript' src='./js/jQuery.tubeplayer.min.js'></script>
+<link rel="stylesheet" type="text/css" href="./css/weirdStyle.css">
+
+<body>
+
+<div id='cssmenu'>
+<ul>
+   <li class='active'><a href='#'><span>Home</span></a></li>
+   <li><a href='#'><span>Account</span></a></li>
+   <li><a href='#'><span>Top Videos</span></a></li>
+   <li class='last'><a href='#'><span>About Us</span></a></li>
+</ul>
+</div>
+<div  id='title'>
+<h1>The Weird Part of YouTube</h1>
+</div>
+<div id='theatre-box' onclick='
+		var theatrebox = document.querySelector("#theatre-box");
+		theatrebox.style.visibility = "hidden";
+
+
+		var title = document.querySelector("#title");
+		title.style.visibility = "visible";'	>
+<div  id='youtube-player-container'> </div>
+
+<a href="#" onClick='jQuery("#youtube-player-container").tubeplayer("play", document.getElementById("videoID").value)'>
+
+</a>
+</div>
+    <a class="button" onclick="document.querySelector('#theatre-box').style.visibility = 'visible';
+    document.querySelector('#title').style.visibility = 'hidden';
+    jQuery('#youtube-player-container').tubeplayer('play');">
+        <span>Get Weird</span>
+    </a>
+</body>
+<footer>
+  <p>Created at: RPI RCOS 2015</p>
+  <p>Contact information: raghua@rpi.edu, martij@rpi.edu, metrom@rpi.edu, metroa@rpi.edu</p>
+</footer>
+<script type="text/javascript">
+        function playNextVid() {
+          $.getJSON("./api/getrandomvid", function(vid) {
+            console.log(vid);
+            jQuery("#youtube-player-container").tubeplayer("play", vid.vidID);
+          });
+        }
+        $(document).keydown(function(e) {
+                switch(e.which) {
+                    case 39: // right (fast-forward)
+                      playNextVid();
+                    break;
+                    case 32: // right (fast-forward)
+                      playNextVid();
+                    break;
+                    default: return; // exit this handler for other keys
+                }
+                e.preventDefault(); // prevent the default action (scroll / move caret)
+            });
+
+        jQuery("#youtube-player-container").tubeplayer({
+	width: 800, // the width of the player
+	height: 600, // the height of the player
+	allowFullScreen: "true", // true by default, allow user to go full screen
+	initialVideo: "<%= videoID %>", // the video that is loaded into the player
+	preferredQuality: "default",// preferred quality: default, small, medium, large, hd720
+	onPlay: function(id){}, // after the play method is called
+	onPause: function(){}, // after the pause method is called
+	onStop: function(){}, // after the player is stopped
+	onSeek: function(time){}, // after the video has been seeked to a defined point
+	onMute: function(){},
+	onPlayerEnded: function(){
+		playNextVid();
+        },
+	onPlayerPlaying: function(){
+		var theatrebox = document.querySelector("#theatre-box");
+		theatrebox.style.visibility = "visibile";
+
+
+		var title = document.querySelector("#title");
+		title.style.visibility = "hidden";
+	}, // after the player is muted
+	onUnMute: function(){}, // after the player is unmuted
+        // Error State Specific Functionality
+	onErrorNotFound: function(){playNextVid();}, // if a video cant be found
+	onErrorNotEmbeddable: function(){playNextVid();}, // if a video isnt embeddable
+	onErrorInvalidParameter: function(){playNextVid();} // if we've got an invalid param
+});</script>
+</html>
