Fixed responsive footer issue

--- a/public/css/weirdStyle.css
+++ b/public/css/weirdStyle.css
@@ -5,7 +5,7 @@ body {
     linear-gradient(150deg, #445 12%, transparent 12.5%, transparent 87%, #445 87.5%, #445),
     linear-gradient(30deg, #445 12%, transparent 12.5%, transparent 87%, #445 87.5%, #445),
     linear-gradient(150deg, #445 12%, transparent 12.5%, transparent 87%, #445 87.5%, #445),
-    linear-gradient(60deg, #99a 25%, transparent 25.5%, transparent 75%, #99a 75%, #99a), 
+    linear-gradient(60deg, #99a 25%, transparent 25.5%, transparent 75%, #99a 75%, #99a),
     linear-gradient(60deg, #99a 25%, transparent 25.5%, transparent 75%, #99a 75%, #99a);
     background-size:80px 140px;
     background-position: 0 0, 0 0, 40px 70px, 40px 70px, 0 0, 40px 70px;
@@ -26,10 +26,10 @@ body {
     margin-right: auto ;
     margin-top: 2%;
     margin-bottom: 2%;
-    background: 
-    linear-gradient(63deg, #999 23%, transparent 23%) 7px 0, 
-    linear-gradient(63deg, transparent 74%, #999 78%), 
-    linear-gradient(63deg, transparent 34%, #999 38%, #999 58%, transparent 62%), 
+    background:
+    linear-gradient(63deg, #999 23%, transparent 23%) 7px 0,
+    linear-gradient(63deg, transparent 74%, #999 78%),
+    linear-gradient(63deg, transparent 34%, #999 38%, #999 58%, transparent 62%),
     #444;
     background-size: 16px 48px;
     z-index:0;
@@ -94,10 +94,10 @@ h1:hover {
     left: 200px;
     display: inline-block;
     margin: 0 auto;*/
-    
+
     -webkit-border-radius: 10px;
-    
-    -webkit-box-shadow: 
+
+    -webkit-box-shadow:
         0px 3px rgba(128,128,128,1), /* gradient effects */
         0px 4px rgba(118,118,118,1),
         0px 5px rgba(108,108,108,1),
@@ -105,67 +105,67 @@ h1:hover {
         0px 7px rgba(88,88,88,1),
         0px 8px rgba(78,78,78,1),
         0px 14px 6px -1px rgba(128,128,128,1); /* shadow */
-    
+
     -webkit-transition: -webkit-box-shadow .1s ease-in-out;
-} 
+}
 
 .button span {
     background-color: #E8E8E8;
-    
-    background-image: 
+
+    background-image:
         /* gloss gradient */
         -webkit-gradient(
-            linear, 
-            left bottom, 
-            left top, 
-            color-stop(50%,rgba(255,255,255,0)), 
-            color-stop(50%,rgba(255,255,255,0.3)), 
+            linear,
+            left bottom,
+            left top,
+            color-stop(50%,rgba(255,255,255,0)),
+            color-stop(50%,rgba(255,255,255,0.3)),
             color-stop(100%,rgba(255,255,255,0.2))),
-        
+
         /* dark outside gradient */
         -webkit-gradient(
-            linear, 
-            left top, 
-            right top, 
-            color-stop(0%,rgba(210,210,210,0.3)), 
-            color-stop(20%,rgba(210,210,210,0)), 
-            color-stop(80%,rgba(210,210,210,0)), 
+            linear,
+            left top,
+            right top,
+            color-stop(0%,rgba(210,210,210,0.3)),
+            color-stop(20%,rgba(210,210,210,0)),
+            color-stop(80%,rgba(210,210,210,0)),
             color-stop(100%,rgba(210,210,210,0.3))),
-        
+
         /* light inner gradient */
         -webkit-gradient(
-            linear, 
-            left top, 
-            right top, 
-            color-stop(0%,rgba(255,255,255,0)), 
-            color-stop(20%,rgba(255,255,255,0.5)), 
-            color-stop(80%,rgba(255,255,255,0.5)), 
-            color-stop(100%,rgba(255,255,255,0))),        
-        
+            linear,
+            left top,
+            right top,
+            color-stop(0%,rgba(255,255,255,0)),
+            color-stop(20%,rgba(255,255,255,0.5)),
+            color-stop(80%,rgba(255,255,255,0.5)),
+            color-stop(100%,rgba(255,255,255,0))),
+
         /* diagonal line pattern */
         -webkit-gradient(
-            linear, 
-            0% 100%, 
-            100% 0%, 
-            color-stop(0%,rgba(255,255,255,0)), 
-            color-stop(40%,rgba(255,255,255,0)), 
-            color-stop(40%,#D2D2D1), 
-            color-stop(60%,#D2D2D1), 
-            color-stop(60%,rgba(255,255,255,0)), 
+            linear,
+            0% 100%,
+            100% 0%,
+            color-stop(0%,rgba(255,255,255,0)),
+            color-stop(40%,rgba(255,255,255,0)),
+            color-stop(40%,#D2D2D1),
+            color-stop(60%,#D2D2D1),
+            color-stop(60%,rgba(255,255,255,0)),
             color-stop(100%,rgba(255,255,255,0)));
-    
+
         -webkit-box-shadow:
             0px -1px #fff, /* top highlight */
             0px 1px 1px #FFFFFF; /* bottom edge */
-    
+
     -webkit-background-size: 100%, 100%, 100%, 4px 4px;
-    
+
     -webkit-border-radius: 10px;
     -webkit-transition: -webkit-transform .1s ease-in-out;
-    
+
     display: inline-block;
     padding: 10px 40px 10px 40px;
-    
+
     color: #3A474D;
     text-transform: uppercase;
     font-family: 'TradeGothicLTStd-BdCn20','PT Sans Narrow';
@@ -182,7 +182,7 @@ h1:hover {
         }
 
         .button:active {
-            -webkit-box-shadow: 
+            -webkit-box-shadow:
                 0px 3px rgba(128,128,128,1),
                 0px 4px rgba(118,118,118,1),
                 0px 5px rgba(108,108,108,1),
@@ -201,18 +201,18 @@ h1:hover {
         display: block;
         width: 10px;
         height: 10px;
-    
+
         position: absolute;
         right: 14px;
-        top: 12px;    
-        
+        top: 12px;
+
         font-family: 'Cabin';
         font-weight: 700;
         color: #AEBF3B;
         text-shadow: 0px 1px #fff, 0px -1px #97A63A;
         font-size: 26px;
     }
-    
+
 #cssmenu {
   background: #gray;
   width: auto;
@@ -337,6 +337,7 @@ footer{
   background: rgba(180, 180, 190, 0.5);
   border: 2px solid #8AC007;
   position: fixed;
+  height: 15%;
   width: 50%;
   bottom:-1%;
   left:25%;
