--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,10 +8,19 @@
 
 <div id='cssmenu'>
 <ul>
-   <li class='active'><a href='#'><span>Home</span></a></li>
-   <li><a href='#'><span>Account</span></a></li>
-   <li><a href='#'><span>Top Videos</span></a></li>
-   <li class='last'><a href='#'><span>About Us</span></a></li>
+   <li class='active'><a href='/'><span>Home</span></a></li>
+   <%if (user) { %>
+    <%if (user.admin) { %>
+      <li><a href='/admin'><span>Admin Panel</span></a></li>
+    <% } %>
+    <li><p> You are currently logged in as <%= user.username %> </p>
+    <a href="/logout"> Logout </a></li>
+   <% } %>
+   <%if (!user) { %>
+    <li><a href='/login'><span>Log In</span></a></li>
+    <li><a href='/register'><span>Register</span></a></li>
+   <% } %>
+   <!--<li class='last'><a href='#'><span>About Us</span></a></li>-->
 </ul>
 </div>
 <div  id='title'>
