--- a/public/css/weirdStyle.css
+++ b/public/css/weirdStyle.css
@@ -18,27 +18,7 @@ body {
     padding-top: 7%;
 }
 
-#title {
-    border-radius: 25px;
-    border: 2px solid #8AC007;
-    width: 70%;
-    margin-left: auto ;
-    margin-right: auto ;
-    margin-top: 2%;
-    margin-bottom: 2%;
-    background:
-    linear-gradient(63deg, #999 23%, transparent 23%) 7px 0,
-    linear-gradient(63deg, transparent 74%, #999 78%),
-    linear-gradient(63deg, transparent 34%, #999 38%, #999 58%, transparent 62%),
-    #444;
-    background-size: 16px 48px;
-    z-index:0;
-
-    animation: animatedBackground 10s linear infinite;
-
-}
-
-h1{
+t1{ /*title font*/
     -webkit-box-sizing: content-box;
     -moz-box-sizing: content-box;
     box-sizing: content-box;
@@ -53,12 +33,12 @@ h1{
     -moz-transition: all 600ms cubic-bezier(0.68, -0.55, 0.265, 1.55);
     -o-transition: all 600ms cubic-bezier(0.68, -0.55, 0.265, 1.55);
     transition: all 600ms cubic-bezier(0.68, -0.55, 0.265, 1.55);
-	font-family: 'Damion', cursive;
-	font-size: 72px;
+    font-family: 'Damion', cursive;
+    font-size: 6vw;
 
 }
 
-h1:hover {
+t1:hover {
   text-shadow: -3px 0 0 rgb(217,31,38) , -6px 0 0 rgb(226,91,14) , -9px 0 0 rgb(245,221,8) , -12px 0 0 rgb(5,148,68) , -15px 0 0 rgb(2,135,206) , -18px 0 0 rgb(4,77,145) , -21px 0 0 rgb(42,21,113) ;
   -webkit-transition: all 500ms cubic-bezier(0.68, -0.55, 0.265, 1.55);
   -moz-transition: all 500ms cubic-bezier(0.68, -0.55, 0.265, 1.55);
@@ -343,4 +323,8 @@ footer{
   left:25%;
   right:25%;
   padding-bottom: 0%;
+}
+
+f1{
+font-size: 2vh;
 }
