--- a/views/index.ejs
+++ b/views/index.ejs
@@ -24,7 +24,7 @@
 </ul>
 </div>
 <div  id='title'>
-<h1>The Weird Part of YouTube</h1>
+<t1>The Weird Part of YouTube</t1>
 </div>
 <div id='theatre-box' onclick='
 		var theatrebox = document.querySelector("#theatre-box");
@@ -46,8 +46,10 @@
     </a>
 </body>
 <footer>
+  <f1>
   <p>Created at: RPI RCOS 2015</p>
   <p>Contact information: raghua@rpi.edu, martij@rpi.edu, metrom@rpi.edu, metroa@rpi.edu</p>
+</f1>
 </footer>
 <script type="text/javascript">
         function playNextVid() {
