Clicking out of video now stops the video
Before videos would continue to play after closing the theatre box.

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,7 +19,7 @@
 		var theatrebox = document.querySelector("#theatre-box");
 		theatrebox.style.visibility = "hidden";
 
-
+    jQuery("#youtube-player-container").tubeplayer("stop");
 		var title = document.querySelector("#title");
 		title.style.visibility = "visible";'	>
 <div  id='youtube-player-container'> </div>
