some CSS changes

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,7 +2,7 @@
 <html>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
 <script type='text/javascript' src='./js/jQuery.tubeplayer.min.js'></script>
-<link rel="stylesheet" type="text/css" href="./css/weirdStyle.css">
+<link rel="stylesheet" type="text/css" href="./css/WeirdStyle.css">
 <div id='cssmenu'>
 <ul>
    <li class='active'><a href='/'><span>Home</span></a></li>
@@ -25,7 +25,7 @@
 <t1>The Weird Part of YouTube</t1>
 </div>
 <div id='theatre-box'	>
-<div  id='youtube-player-container'>     
+<div  id='youtube-player-container'>
     <a class="playerbutton" onclick='
     document.querySelector("#theatre-box").style.visibility = "hidden";
 
