added nice looking buttons

--- a/views/admin/index.ejs
+++ b/views/admin/index.ejs
@@ -11,7 +11,7 @@
 	<input type="text" name="videoID"/><br/>
 	</div>
 	<div>
-	<input type="submit" value="Submit"/>
+	<input type="submit" value="Submit" class="pure-button"/>
 	</div>
 </form>
 
@@ -21,7 +21,7 @@
 	<input type="text" name="videoID"/><br/>
 	</div>
 	<div>
-	<input type="submit" value="Remove"/>
+	<input type="submit" value="Remove" class="pure-button"/>
 	</div>
 </form>
 
