styled the register page

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -13,7 +13,7 @@
     <div class="container">
       <form class="form-signin" action="/login" method="post">
         <h2 class="form-signin-heading">Please sign in</h2>
-        <label for="inputEmail" class="sr-only">Email address</label>
+        <label for="username" class="sr-only">Username</label>
         <input id="username" class="form-control" placeholder="username" name="username" required="" autofocus="" type="text">
         <label for="password" class="sr-only">Password</label>
         <input id="password" class="form-control" placeholder="password" name="password" required="" type="password">
