--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,13 +1,28 @@
-<form action="/register" method="post">
-	<div>
-	<label>Username:</label>
-	<input type="text" name="username"/><br/>
-	</div>
-	<div>
-	<label>Password:</label>
-	<input type="password" name="password"/>
-	</div>
-	<div>
-	<input type="submit" value="Submit"/>
-	</div>
-</form>
+<!DOCTYPE html>
+<html lang="en"><head>
+<meta http-equiv="content-type" content="text/html; charset=UTF-8">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- Bootstrap core CSS -->
+    <link href="./css/bootstrap.min.css" rel="stylesheet">
+    <!-- Custom styles for this template -->
+    <link href="./css/signin.css" rel="stylesheet">
+  </head>
+  <body>
+    <div class="container">
+      <form class="form-signin" action="/register" method="post">
+        <h2 class="form-signin-heading">Please Register</h2>
+        <label for="username" class="sr-only">Username</label>
+        <input id="username" class="form-control" placeholder="username" name="username" required="" autofocus="" type="text">
+        <label for="password" class="sr-only">Password</label>
+        <input id="password" class="form-control" placeholder="password" name="password" required="" type="password">
+        <div class="checkbox">
+          <label>
+            <input value="remember-me" type="checkbox"> Remember me
+          </label>
+        </div>
+        <button class="btn btn-lg btn-primary btn-block" type="submit" value="Submit">Sign in</button>
+      </form>
+    </div> <!-- /container -->
+</body></html>
