--- a/public/css/WeirdStyle.css
+++ b/public/css/WeirdStyle.css
@@ -70,10 +70,21 @@ t1:hover {
 }
 
 .playerbutton {
-  color: #fff;
-  background-color: #444;
-  padding: 15px 40px 10px 40px;
-  border: 1px solid #000;
+  background: #707070;
+  background-image: -webkit-linear-gradient(top, #707070, #000000);
+  background-image: -moz-linear-gradient(top, #707070, #000000);
+  background-image: -ms-linear-gradient(top, #707070, #000000);
+  background-image: -o-linear-gradient(top, #707070, #000000);
+  background-image: linear-gradient(to bottom, #707070, #000000);
+  -webkit-border-radius: 0;
+  -moz-border-radius: 0;
+  border-radius: 0px;
+  font-family: Arial;
+  color: #ffffff;
+  font-size: 20px;
+  padding: 10px 20px 10px 20px;
+  border: solid #000 2px;
+  text-decoration: none;
   cursor:pointer;
 }
 
@@ -81,7 +92,7 @@ t1:hover {
     display: inline-block;
     padding: 10px 40px 10px 40px;
 
-    color: #666;
+    color: #fff;
     text-transform: uppercase;
     font-family: 'Damion', cursive;
     font-weight: 700;
@@ -91,8 +102,13 @@ t1:hover {
 
 .playerbutton:hover,
 .playerbutton.hover {
-  background-color: #999;
-  text-shadow: -1px 1px #27496d;
+  background: #3cb0fd;
+  background-image: -webkit-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: -moz-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: -ms-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: -o-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: linear-gradient(to bottom, #3cb0fd, #3498db);
+  text-decoration: none;
 }
 
 .playerbutton:active,
