Remove Ugly footer

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,3 +1,4 @@
+<!--   Created at: RPI RCOS 2015: Contact information: raghua@rpi.edu, martij@rpi.edu, metrom@rpi.edu, metroa@rpi.edu -->
 <!DOCTYPE html>
 <html>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
@@ -54,12 +55,6 @@
         <span>Get Weird</span>
     </a>
 </body>
-<footer>
-  <f1>
-  <p>Created at: RPI RCOS 2015</p>
-  <p>Contact information: raghua@rpi.edu, martij@rpi.edu, metrom@rpi.edu, metroa@rpi.edu</p>
-</f1>
-</footer>
 <script type="text/javascript">
         function playNextVid() {
           $.getJSON("./api/getrandomvid", function(vid) {
