--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,6 +20,7 @@
     <li><a href='/register'><span>Register</span></a></li>
    <% } %>
    <!--<li class='last'><a href='#'><span>About Us</span></a></li>-->
+   <li><a href='/about'><span>About Us</span></a></li>
 </ul>
 </div>
 <body>
