Relative path to css for local machines
Temporary fix

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<link rel="stylesheet" type="text/css" href="./css/WeirdStyle.css">
+<link rel="stylesheet" type="text/css" href="../public/css/WeirdStyle.css">
 
 
 Under Construction
