Change of font type

--- a/public/css/WeirdStyle.css
+++ b/public/css/WeirdStyle.css
@@ -96,7 +96,7 @@ t1:hover {
 
     color: #fff;
     text-transform: uppercase;
-    font-family: 'Damion', cursive;
+    font-family: 'Book Antiqua', cursive;
     font-weight: 700;
     font-size: 32px;
     width: 25%;
