--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,7 +20,6 @@
     <li><a href='/register'><span>Register</span></a></li>
    <% } %>
    <!--<li class='last'><a href='#'><span>About Us</span></a></li>-->
-   <li><a href='/about'><span>About Us</span></a></li>
 </ul>
 </div>
 <body>
@@ -78,7 +77,7 @@
             });
 
         jQuery("#youtube-player-container").tubeplayer({
-	width: 800, // the width of the player
+	width: "80%", // the width of the player
 	height: 600, // the height of the player
 	allowFullScreen: "true", // true by default, allow user to go full screen
 	initialVideo: "<%= videoID %>", // the video that is loaded into the player
