Add title menu to player page

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -49,7 +49,7 @@
 </a>
 </div>
     <a class="gobutton" id='gobutt' onclick="document.querySelector('#theatre-box').style.visibility = 'visible';
-    document.querySelector('#cssmenu').style.visibility = 'hidden';
+    document.querySelector('#cssmenu').style.visibility = 'visible';
     document.querySelector('#title').style.visibility = 'hidden';
     document.querySelector('#gobutt').style.visibility = 'hidden';
     jQuery('#youtube-player-container').tubeplayer('play');">
