--- a/views/index.ejs
+++ b/views/index.ejs
@@ -24,8 +24,16 @@
 </ul>
 </div>
 <body>
-<div  id='title'>
+<div  id='title' class="titlebox">
 <t1>The Weird Part of YouTube</t1>
+<br>
+<a class="gobutton" id='gobutt' onclick="document.querySelector('#theatre-box').style.visibility = 'visible';
+    document.querySelector('#cssmenu').style.visibility = 'visible';
+    document.querySelector('#title').style.visibility = 'hidden';
+    document.querySelector('#gobutt').style.visibility = 'hidden';
+    jQuery('#youtube-player-container').tubeplayer('play');">
+        <span>Get Weird</span>
+</a>
 </div>
 <div id='theatre-box'	>
 <div  id='youtube-player-container'>
@@ -49,13 +57,7 @@
 
 </a>
 </div>
-    <a class="gobutton" id='gobutt' onclick="document.querySelector('#theatre-box').style.visibility = 'visible';
-    document.querySelector('#cssmenu').style.visibility = 'visible';
-    document.querySelector('#title').style.visibility = 'hidden';
-    document.querySelector('#gobutt').style.visibility = 'hidden';
-    jQuery('#youtube-player-container').tubeplayer('play');">
-        <span>Get Weird</span>
-    </a>
+    
 </body>
 <script type="text/javascript">
         function playNextVid() {
