--- a/public/css/WeirdStyle.css
+++ b/public/css/WeirdStyle.css
@@ -119,11 +119,10 @@ t1:hover {
 	margin: 0 auto;
 	margin-top: 50px;
 	padding: 10px 40px 20px 40px;
-    background: #445;
+    background: rgba(10, 10, 20, .95);
     width: 80%;
     float: center;
-    box-shadow:  0px 0px 20px 10px #112;
-    opacity: 0.9;
+    box-shadow: 0px 0px 10px 10px #112;
 
 /*
     color: purple;
