changed css link

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<link rel="stylesheet" type="text/css" href="../public/css/WeirdStyle.css">
+<link rel="stylesheet" type="text/css" href="./css/WeirdStyle.css">
 <body>
 	<h1>About Us</h1>
 	<p>Hello! We are the Weird Side of Youtube! This is an open-source project started by members of Alpha Chi Rho fraternity at Rensselaer Polytechnic Institute in Troy New York!</p>
