Uncommented about us link

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,7 +19,7 @@
     <li><a href='/login'><span>Log In</span></a></li>
     <li><a href='/register'><span>Register</span></a></li>
    <% } %>
-   <!--<li class='last'><a href='#'><span>About Us</span></a></li>-->
+   <li class='last'><a href='#'><span>About Us</span></a></li>
    <li><a href='/about'><span>About Us</span></a></li>
 </ul>
 </div>
